# gta7

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/music/: ATTRIBUTION.txt
assets/shaders/: bloom_composite.fs  blur.fs  bright_extract.fs  crt_post.fs  depth.fs  depth.vs  god_rays.fs  lighting.fs  lighting.vs  sky.fs  sky.vs  ssr.fs
docs/: music-acquisition-guide.md
docs/superpowers/plans/: 2026-06-22-lighting-shadows-fog.md  2026-06-24-graphics-moonshot.md  2026-06-24-test-harness.md
docs/superpowers/specs/: 2026-06-21-gta7-design.md  2026-06-22-lighting-restore-design.md  2026-06-22-lighting-shadows-fog-design.md  2026-06-24-graphics-moonshot-design.md  2026-06-24-test-harness-design.md
src/: camera.rs  cli_args.rs  combat.rs  config.rs  game.rs  hud.rs  input.rs  lib.rs  main.rs  mathx.rs  mission.rs  pickup.rs  player.rs  postfx_mask.rs  sound.rs  sound_tracks.rs  test_scene.rs  time.rs  vehicle.rs  wanted.rs
src/ai/: cop.rs  mod.rs  ped.rs  traffic.rs
src/render/: fx.rs  lighting.rs  mod.rs  models.rs  postfx.rs
src/world/: city.rs  collision.rs  mod.rs
