[package]
name = "gta7"
version = "0.1.0"
edition = "2021"

[lib]
name = "gta7"
path = "src/lib.rs"

[[bin]]
name = "gta7"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
raylib = { version = "6.0", features = ["SUPPORT_IMAGE_GENERATION", "SUPPORT_MESH_GENERATION", "SUPPORT_MODULE_RMODELS", "SUPPORT_MODULE_RTEXTURES", "SUPPORT_MODULE_RTEXT", "SUPPORT_MODULE_RSHAPES", "SUPPORT_CAMERA_SYSTEM"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
